# raft-engine

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  OWNERS  OWNERS_ALIASES  README.md  build.rs  check_before_commit.sh  codecov.yml  rust-toolchain  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: bench_recovery.rs
ctl/: Cargo.toml
ctl/src/: lib.rs  main.rs
examples/: append_compact_purge.rs  fork.rs  minimum_copy.rs  single_group_wal.rs
failpoints/: io_error_test.rs  mod.rs  test_io_error.rs
src/: blocking_pipe_log.rs  cache.rs  cache_evict.rs  codec.rs  compression.rs  config.rs  consistency.rs  copy.rs  engine.rs  entry_cache.rs  errors.rs  event_listener.rs  file_builder.rs  file_pipe_log.rs  file_system.rs  filter.rs  fork.rs  hint.rs  iovec.rs  lib.rs  log_batch.rs  log_dumper.rs  log_file.rs  memtable.rs  metrics.rs  pipe_log.rs  purge.rs  reader.rs  recover.rs  swappy_allocator.rs  test_util.rs  truncate.rs  util.rs  wal.rs  write_barrier.rs
src/env/: default.rs  double_write.rs  hedged.rs  log_fd.rs  mod.rs  obfuscated.rs
src/env/hedged/: mod.rs  recover.rs  runner.rs  sender.rs  task.rs  util.rs
src/env/log_fd/: plain.rs  unix.rs
src/file_pipe_log/: builder.rs  file_mgr.rs  format.rs  log_file.rs  mod.rs  pipe.rs  pipe_builder.rs  pipe_log.rs  reader.rs
stress/: Cargo.toml
stress/src/: main.rs
tests/benches/: bench_falloc.rs  bench_recovery.rs  mod.rs
tests/failpoints/: mod.rs  test_engine.rs  test_io_error.rs  util.rs
