[package]
name = "raft-engine"
version = "0.1.0"
authors = ["The TiKV Authors"]
edition = "2018"

[[example]]
name = "append-compact-purge"
path = "examples/append_compact_purge.rs"

[[test]]
name = "failpoints"
path = "tests/failpoints/mod.rs"
required-features = ["failpoints"]

[[bench]]
name = "benches"
path = "tests/benches/mod.rs"
harness = false
required-features = ["failpoints"]

[dependencies]
byteorder = "1.2"
crc32fast = "1.2"
crossbeam = "0.8"
fail = "0.5"
fs2 = "0.4"
hashbrown = "0.11"
hex = "0.4"
lazy_static = "1.3"
libc = "0.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
lz4-sys = "1.9"
nix = "0.19"
num-derive = "0.3"
num-traits = "0.2"
parking_lot = "0.11"
prometheus = { version = "0.13", features = ["nightly"] }
prometheus-static-metric = "0.5"
protobuf = "2"
rayon = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3.5"
ctor = "0.1"
env_logger = "0.7"
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false, features = ["protobuf-codec"] }
raft = { git = "https://github.com/tikv/raft-rs", branch = "master", default-features = false, features = ["protobuf-codec"] }
rand = "0.7"
rand_distr = "0.3"
tempfile = "3.1"
toml = "0.5"

[features]
failpoints = [
  "fail/failpoints",
]

[patch.crates-io]
raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }

[workspace]
members = ["stress", "ctl"]
