[package]
name = "raft-engine-ctl"
version = "0.3.0"
authors = ["The TiKV Project Developers"]
edition = "2018"
rust-version = "1.61.0"
description = "A control tool for Raft Engine"
repository = "https://github.com/tikv/raft-engine"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.3", features = ["derive", "cargo"] }
env_logger = "0.10"
raft-engine = { path = "..", version = "0.3.0", features = ["scripting", "internals"] }
