[package]
name = "raft-engine-ctl"
version = "0.4.2"
authors = ["The TiKV Project Developers"]
edition = "2018"
rust-version = "1.75.0"
description = "A control tool for Raft Engine"
repository = "https://github.com/tikv/raft-engine"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
env_logger = "0.10"
raft-engine = { path = "..", version = "0.4.1", features = [
    "scripting",
    "internals",
] }
