[package]
name = "stress"
version = "0.3.0"
authors = ["The TiKV Authors"]
edition = "2018"

[dependencies]
clap = { version = "3.1.6", features = ["derive", "cargo"] }
const_format = "0.2.13"
hdrhistogram = "7.4"
num-traits = "0.2.14"
parking_lot_core = "0.9.1"
raft = { git = "https://github.com/tikv/raft-rs", rev = "f60fb9e143e5b93f7db8917ea376cda04effcbb4", default-features = false, features = [
    "protobuf-codec",
] }
raft-engine = { path = "..", features = ["internals"] }
rand = "0.8"
rand_distr = "0.4"
statistical = "1.0.0"
